--- a/Soul Engine/PropertySheet.props
+++ b/Soul Engine/PropertySheet.props
@@ -3,8 +3,8 @@
   <ImportGroup Label="PropertySheets" />
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup>
-    <IncludePath>N:\Documents\Dropbox\Soul Engine\Soul Engine\Soul Engine\Include Files;N:\Documents\Dropbox\Soul Engine\Soul Engine\Soul Engine\Source Files;$(CUDA_INC_PATH);$(VC_IncludePath);$(WindowsSDK_IncludePath);N:\Work\Libraries\glfw-3.1.1.bin.WIN64\include;N:\Work\Libraries\glew-1.12.0\include;N:\Work\Libraries\glm-0.9.6.3\glm;N:\Work\Libraries\stb;N:\Work\Libraries\Assimp-3.1\assimp-3.1.1-win-binaries\include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(VC_LibraryPath);$(WindowsSDK_LibraryPath);N:\Work\Libraries\glfw-3.1.1.bin.WIN64\lib-vc2013;N:\Work\Libraries\glew-1.12.0\lib\Release\x64;N:\Work\Libraries\Assimp-3.1\assimp-3.1.1-win-binaries\lib64;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(ProjectDir)\Include Files;$(ProjectDir)\Source Files;$(CUDA_INC_PATH);$(VC_IncludePath);$(WindowsSDK_IncludePath);$(ProjectDir)\Libraries\glfw-3.1.1.bin.WIN64\include;$(ProjectDir)\Libraries\glew-1.12.0\include;$(ProjectDir)\Libraries\glm-0.9.6.3\glm;$(ProjectDir)\Libraries\stb;$(IncludePath)</IncludePath>
+    <LibraryPath>$(VC_LibraryPath);$(WindowsSDK_LibraryPath);$(ProjectDir)\Libraries\glfw-3.1.1.bin.WIN64\lib-vc2013;$(ProjectDir)\Libraries\glew-1.12.0\lib\Release\x64;$(LibraryPath)</LibraryPath>
     <ExecutablePath>$(VC_ExecutablePath);$(WindowsSDK_ExecutablePath);$(VS_ExecutablePath);$(MSBuild_ExecutablePath);$(FxCopDir);$(PATH);$(ExecutablePath)</ExecutablePath>
     <ReferencePath>$(VC_ReferencesPath);$(ReferencePath)</ReferencePath>
     <IntDir>$(Platform)\$(Configuration)\$(ProjectName)\</IntDir>
@@ -16,10 +16,10 @@
     </Lib>
     <ClCompile>
       <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>N:\Work\Libraries\boost_1_59_0;N:\Documents\Dropbox\Soul Engine\Soul Engine\Soul Engine\Include Files;N:\Documents\Dropbox\Soul Engine\Soul Engine\Soul Engine\Source Files;$(VC_IncludePath);$(WindowsSDK_IncludePath);N:\Work\Libraries\glfw-3.1.1.bin.WIN64\include;N:\Work\Libraries\glew-1.12.0\include;N:\Work\Libraries\glm-0.9.6.3\glm;N:\Work\Libraries\stb;N:\Work\Libraries\Assimp-3.1\assimp-3.1.1-win-binaries\include;$(IncludePath);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)\Include Files;$(ProjectDir)\Source Files;$(VC_IncludePath);$(WindowsSDK_IncludePath);$(ProjectDir)\Libraries\glfw-3.1.1.bin.WIN64\include;$(ProjectDir)\Libraries\glew-1.12.0\include;$(ProjectDir)\Libraries\glm-0.9.6.3\glm;$(ProjectDir)\Libraries\stb;$(IncludePath);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <AdditionalLibraryDirectories>N:\Work\Libraries\OpenMesh-4.1\OpenMesh 4.1\lib;$(VC_LibraryPath);$(WindowsSDK_LibraryPath);N:\Work\Libraries\glfw-3.1.1.bin.WIN64\lib-vc2013;N:\Work\Libraries\glew-1.12.0\lib\Release\x64;N:\Work\Libraries\Assimp-3.1\assimp-3.1.1-win-binaries\bin64;N:\Work\Libraries\Assimp-3.1\assimp-3.1.1-win-binaries\lib64;$(LibraryPath);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(VC_LibraryPath);$(WindowsSDK_LibraryPath);$(ProjectDir)\Libraries\glfw-3.1.1.bin.WIN64\lib-vc2013;$(ProjectDir)\Libraries\glew-1.12.0\lib\Release\x64;$(LibraryPath);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>glfw3.lib;opengl32.lib;glu32.lib;glew32.lib;assimp.lib;OpenMeshCored.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <ProjectReference>
