--- a/Soul Engine/Soul Engine.vcxproj
+++ b/Soul Engine/Soul Engine.vcxproj
@@ -175,6 +175,7 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <ClInclude Include="Source Files\Input\Input.h" />
     <ClInclude Include="Source Files\Input\InputHelper.h" />
     <ClInclude Include="Source Files\Ray Engine\RayEngine.h" />
+    <ClInclude Include="Source Files\Ray Engine\RayJob.h" />
     <ClInclude Include="Source Files\Renderer\Bidirectional Path Tracer\CUDA\BDPTracer.h" />
     <ClInclude Include="Source Files\Renderer\Path Tracer\CUDA\PTracer.h" />
     <ClInclude Include="Source Files\Renderer\Ray Tracer\CUDA\RayTracer.h" />
@@ -201,6 +202,7 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <ClCompile Include="Source Files\Input\Input.cpp" />
     <ClCompile Include="Source Files\Input\InputHelper.cpp" />
     <ClCompile Include="Source Files\Ray Engine\RayEngine.cpp" />
+    <ClCompile Include="Source Files\Ray Engine\RayJob.cpp" />
     <ClCompile Include="Source Files\Renderer\Bidirectional Path Tracer\CUDA\BDPtracer.cpp" />
     <ClCompile Include="Source Files\Renderer\Path Tracer\CUDA\PTracer.cpp" />
     <ClCompile Include="Source Files\Renderer\Ray Tracer\CUDA\RayTracer.cpp" />
