--- a/Soul Engine/Soul Engine.vcxproj.filters
+++ b/Soul Engine/Soul Engine.vcxproj.filters
@@ -100,12 +100,6 @@
     <Filter Include="Engine Backend\Bounding Volume Heirarchy\CUDA">
       <UniqueIdentifier>{c5294c1b-e4b7-432b-869b-46cf2a8e0bad}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Resources">
-      <UniqueIdentifier>{fbf4ced6-05ea-4f3c-90c5-f7c50bc66365}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Resources\Textures">
-      <UniqueIdentifier>{b9ff9fc1-7b62-4755-a64d-d50251a93121}</UniqueIdentifier>
-    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source Files\Engine Core\BasicDependencies.h">
@@ -186,11 +180,11 @@
     <ClInclude Include="Include Files\SoulCore.h">
       <Filter>Engine Frontend</Filter>
     </ClInclude>
-    <ClInclude Include="Source Files\Ray Engine\RayJob.h">
-      <Filter>Engine Backend\Ray Engine</Filter>
-    </ClInclude>
     <ClInclude Include="Source Files\Multithreading\Scheduler.h">
       <Filter>Engine Backend\Multithreading</Filter>
+    </ClInclude>
+    <ClInclude Include="Source Files\Ray Engine\RayJob.cuh">
+      <Filter>Engine Backend\Ray Engine</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -266,17 +260,12 @@
     <ClCompile Include="Source Files\Engine Core\SoulCore.cpp">
       <Filter>Engine Backend\Engine Core</Filter>
     </ClCompile>
-    <ClCompile Include="Source Files\Ray Engine\RayJob.cpp">
-      <Filter>Engine Backend\Ray Engine</Filter>
-    </ClCompile>
     <ClCompile Include="Source Files\Multithreading\Scheduler.cpp">
       <Filter>Engine Backend\Multithreading</Filter>
     </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <Image Include="Source Files\Resources\Textures\PhasmaDefault.png">
-      <Filter>Engine Backend\Resources\Textures</Filter>
-    </Image>
+    <ClCompile Include="Source Files\Ray Engine\RayJob.cu">
+      <Filter>Engine Backend\Ray Engine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CudaCompile Include="Source Files\Utility\CUDA\CUDAManaged.cu">
@@ -291,5 +280,10 @@
     <CudaCompile Include="Source Files\Ray Engine\CUDA\RayEngine.cu">
       <Filter>Engine Backend\Ray Engine</Filter>
     </CudaCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="Source Files\Resources\Textures\SoulDefault.png">
+      <Filter>Engine Backend\Resources\Textures</Filter>
+    </Image>
   </ItemGroup>
 </Project>
