--- a/Soul Engine/Soul Engine.vcxproj.filters
+++ b/Soul Engine/Soul Engine.vcxproj.filters
@@ -106,6 +106,9 @@
     <Filter Include="Engine Backend\Resources\Shaders">
       <UniqueIdentifier>{f0ff9397-db0b-4e92-b4a1-82cce5ddc33e}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Engine Backend\Libraries">
+      <UniqueIdentifier>{b4a743ac-78ad-41e9-8c6f-52fc907857f4}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source Files\Engine Core\BasicDependencies.h">
@@ -204,6 +207,24 @@
     <ClInclude Include="Source Files\Engine Core\Camera\CUDA\Camera.cuh">
       <Filter>Engine Backend\Engine Core\Camera\CUDA</Filter>
     </ClInclude>
+    <ClInclude Include="Libraries\imgui\imconfig.h">
+      <Filter>Engine Backend\Libraries</Filter>
+    </ClInclude>
+    <ClInclude Include="Libraries\imgui\imgui.h">
+      <Filter>Engine Backend\Libraries</Filter>
+    </ClInclude>
+    <ClInclude Include="Libraries\imgui\imgui_internal.h">
+      <Filter>Engine Backend\Libraries</Filter>
+    </ClInclude>
+    <ClInclude Include="Libraries\imgui\stb_rect_pack.h">
+      <Filter>Engine Backend\Libraries</Filter>
+    </ClInclude>
+    <ClInclude Include="Libraries\imgui\stb_textedit.h">
+      <Filter>Engine Backend\Libraries</Filter>
+    </ClInclude>
+    <ClInclude Include="Libraries\imgui\stb_truetype.h">
+      <Filter>Engine Backend\Libraries</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source Files\Utility\OpenGL\GLError.cpp">
@@ -280,6 +301,15 @@
     </ClCompile>
     <ClCompile Include="Source Files\Ray Engine\RayJob.cu">
       <Filter>Engine Backend\Ray Engine</Filter>
+    </ClCompile>
+    <ClCompile Include="Libraries\imgui\imgui.cpp">
+      <Filter>Engine Backend\Libraries</Filter>
+    </ClCompile>
+    <ClCompile Include="Libraries\imgui\imgui_demo.cpp">
+      <Filter>Engine Backend\Libraries</Filter>
+    </ClCompile>
+    <ClCompile Include="Libraries\imgui\imgui_draw.cpp">
+      <Filter>Engine Backend\Libraries</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
