--- a/Soul Engine/Soul Engine.vcxproj
+++ b/Soul Engine/Soul Engine.vcxproj
@@ -166,12 +166,6 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
   <ItemGroup>
     <ClInclude Include="Include Files\Metrics.h" />
     <ClInclude Include="Include Files\SoulCore.h" />
-    <ClInclude Include="Libraries\imgui\imconfig.h" />
-    <ClInclude Include="Libraries\imgui\imgui.h" />
-    <ClInclude Include="Libraries\imgui\imgui_internal.h" />
-    <ClInclude Include="Libraries\imgui\stb_rect_pack.h" />
-    <ClInclude Include="Libraries\imgui\stb_textedit.h" />
-    <ClInclude Include="Libraries\imgui\stb_truetype.h" />
     <ClInclude Include="Source Files\Algorithms\Data Algorithms\GPU Quicksort\QuickSort.h" />
     <ClInclude Include="Source Files\Bounding Volume Heirarchy\BVH.h" />
     <ClInclude Include="Source Files\Engine Core\BasicDependencies.h" />
@@ -204,9 +198,6 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <ClInclude Include="Source Files\Utility\OpenGL\ShaderSupport.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Libraries\imgui\imgui.cpp" />
-    <ClCompile Include="Libraries\imgui\imgui_demo.cpp" />
-    <ClCompile Include="Libraries\imgui\imgui_draw.cpp" />
     <ClCompile Include="Source Files\Algorithms\Data Algorithms\GPU Quicksort\QuickSort.cpp" />
     <ClCompile Include="Source Files\Bounding Volume Heirarchy\BVH.cpp" />
     <ClCompile Include="Source Files\Engine Core\Frame\Frame.cpp" />
@@ -224,7 +215,6 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <ClCompile Include="Source Files\Input\InputHelper.cpp" />
     <ClCompile Include="Source Files\Multithreading\Scheduler.cpp" />
     <ClCompile Include="Source Files\Ray Engine\RayEngine.cpp" />
-    <ClCompile Include="Source Files\Ray Engine\RayJob.cu" />
     <ClCompile Include="Source Files\Renderer\Bidirectional Path Tracer\CUDA\BDPtracer.cpp" />
     <ClCompile Include="Source Files\Renderer\Path Tracer\CUDA\PTracer.cpp" />
     <ClCompile Include="Source Files\Renderer\Ray Tracer\CUDA\RayTracer.cpp" />
@@ -239,6 +229,7 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <CudaCompile Include="Source Files\Engine Core\Camera\CUDA\Camera.cu" />
     <CudaCompile Include="Source Files\Ray Engine\CUDA\RayEngine.cu" />
     <CudaCompile Include="Source Files\Ray Engine\Ray.cu" />
+    <CudaCompile Include="Source Files\Ray Engine\RayJob.cu" />
     <CudaCompile Include="Source Files\Utility\CUDA\CUDAManaged.cu" />
     <CudaCompile Include="Source Files\Utility\CUDA\HelperClasses.cu" />
   </ItemGroup>
